# llama-mtmd-eval

./: .gitignore  LICENSE  README.md  config.example.toml  pyproject.toml
cases/: cases.toml  models.toml
data/ground_truth/: paper-tables-ground-truth.txt  test-multi-grid-ground-truth.txt  webpage-tall-ground-truth.txt
src/llama_mtmd_eval/: __init__.py  cases.py  cli.py  config.py  evaluate.py  hf_runner.py  llama_runner.py  models.py  report.py  scoring.py
tests/: test_scoring.py
